--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <img src="images/image-qr-code.png" alt="qr code">
         <p class="two">Improve your front-end <br> skills by building projects</p>
-        <p>Scan the QR code to visic Frontend <br> Mentor and take your coding skills to <br>the next level</p>
+        <p>Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br>the next level</p>
     </div>
 </body>
 </html>
